# TemplatePicoProject

./: .gitignore  CMakeLists.txt  c_cpp_properties.json  main.cpp
mcp2515/: CMakeLists.txt  mcp2515.h
scripts/: build_debug.sh  build_project.sh  clean_build_folder.sh  install_debug.sh  install_uf2.sh  open_minicom.sh
src/: CMakeLists.txt  main.cpp
